fix: change footer color

--- a/style.css
+++ b/style.css
@@ -59,6 +59,6 @@ footer {
   padding-bottom  : 30px;
   justify-content : space-between;
   align-items     : center;
-  background-color: rgb(83, 83, 82);
-  color           : #fff;
+  background: rgb(83, 83, 82);
+  color: #ffffff;
 }
